# Console-Task-Manager

./: pyproject.toml
history/prompts/001-console-task-manager/: 005-implement-console-task-manager.green.prompt.md
